# native-shield-guard

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  README.md  README_ES.md  README_PT.md  REFACTOR_COMPLETION.md  SECURITY.md  firewall-config.json  index.d.ts  index.js  native-shield-guard.node  package-lock.json  package.json  test.js
examples/: bot-login-attack.js  botnet-simulator.js  brute-force-accounts.js  brute-force-advanced.js  cleanup-demo.js  fuzzy-attack.js  generate-creds-pro.js  generate-creds.js  honeypot-test.js  ip-rotation-spoofing.js  normal-traffic-simulator.js  persistence-test.js  predictive-test.js
examples/data/: common-credentials.json  normal-requests.json
src/: lib.rs
tests/: integration_tests.rs
