[package]
name = "native-shield-guard"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", features = ["serde-json"] }
napi-derive = "2.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
regex = "1.10"
chrono = "0.4"
strsim = "0.11"
probabilistic-collections = "0.7"

[build-dependencies]
napi-build = "2.1"
